Fixed pixel shifting on small browsers

--- a/css/splash.css
+++ b/css/splash.css
@@ -36,6 +36,7 @@ h1 {
   width: 100%;
   display: flex;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .nav-splash {
